--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -10,6 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: gautamkrishnar/blog-post-workflow%40master
+      - uses: gautamkrishnar/blog-post-workflow@master
         with:
           feed_list: 'https://medium.com/%40lars.l.timmer'
